# bigmath-hse

./: .gitgnore  CMakeLists.txt  library.cpp  library.h
Google_tests/: CMakeLists.txt  add.cpp  comparing.cpp  div.cpp  multiplication.cpp  pi.cpp  test_division.cpp  test_multiplication.cpp  test_of_casts.cpp  test_subtraction.cpp
main_lib/: CMakeLists.txt  library.cpp  library.h
main_lib/operations/: add.cpp  div.cpp  division.cpp  multiplication.cpp  subtraction.cpp
